Fix for text-align: center issue in CSS affected much more than intended Fixed protected functions not being declared properly causing warning or error (depending on php settings)

--- a/public/css/starbar-generic.css
+++ b/public/css/starbar-generic.css
@@ -1644,7 +1644,7 @@ bringing in elements from jquery-ui smoothness theme and overriding.sb_
 #sayso-starbar #starbar-player-console #sb_popBox_rewards .sb_rewardItem .sb_rewardItem_disabledMsg h1,
 #sayso-starbar #starbar-player-console #sb_popBox_rewards .sb_rewardItem .sb_rewardItem_disabledMsg p,
 #sayso-starbar #sb_popBox_user-level .sb_userLevelIcons.sb_userLevel_current p,
-#sayso-starbar #starbar-player-console .sb_popBox .sb_popBoxInner .sb_popContent p {
+#sayso-starbar #starbar-player-console .sb_popBox .sb_popBoxInner .sb_popContent div.sb_userLevelImg p {
 	text-align: center;
 }
 
